--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -15,7 +15,7 @@ dock_hsplit_1=0
 dock_hsplit_2=425
 dock_hsplit_3=-546
 dock_hsplit_4=0
-dock_filesystem_split=0
+dock_filesystem_split=-155
 dock_filesystem_display_mode=1
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
